Bug 605174 - Fix a number of build warnings in dom/ (based on patch by Ms2ger <ms2ger@gmail.com>); r=peterv